# mifsa-gnss

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in
c/: CMakeLists.txt  mifsa_gnss_c.pc.in
c/include/mifsa/gnss/: client_c.h  types_c.h
c/src/: client_c.cpp
client/: CMakeLists.txt  mifsa_gnss.pc.in
client/include/mifsa/gnss/: client.h
client/src/: client.cpp  interface_fdbus.hpp  interface_ros.hpp  interface_vsomeip.hpp
examples/: CMakeLists.txt  sample.c  sample.cpp
idls/: CMakeLists.txt
idls/fdbus/: CMakeLists.txt  gnss.proto
idls/ros/: CMakeLists.txt  package.xml
idls/ros/msg/: Command.msg  Location.msg
idls/ros/srv/: Nmea.srv
idls/vsomeip/: CMakeLists.txt  gnss.fdepl  gnss.fidl
idls/vsomeip/etc/: commonapi_mifsa_gnss.ini  vsomeip_mifsa_gnss_client.json  vsomeip_mifsa_gnss_server.json
include/mifsa/gnss/: interface.h  platform.h  provider.h  types.h
server/: CMakeLists.txt  mifsa_gnss_server.service.in
server/src/: provider_fdbus.hpp  provider_ros.hpp  provider_vsomeip.hpp  server.cpp  server.h
server/src/parser/: minmea.c  minmea.h
tests/: CMakeLists.txt
